--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,43 @@ body{
     padding-bottom: 50px;
 }
 
+.date {
+display: flex;
+justify-content: flex-end;
+align-items: center;
+font-family: Roboto;
+}
+
+.dateRight {
+    display : flex;
+    align-items : center;
+    justify-content:flex-end;
+}
+
+#dateNumber{
+    font-size:  50px ;
+    color: #69cfbd;
+}
+
+#dateText {
+    display: flex;
+    text-transform: uppercase;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+#dateMonth,
+#dateNumber,
+#dateText {
+    font-weight : bold;
+}
+
+#dateMonth,
+#dateYear{
+   margin-left :  7px ;
+    font-size:  20px ;
+}
+
 .cont {
     width: 100%;
 }
@@ -25,7 +62,6 @@ label.labelTitulo {
  display: flex;
  align-items: center;
  margin-bottom: 30px;
- margin-top: 30px;
  gap: 10px;
 }
 
@@ -40,7 +76,7 @@ label.labelTitulo svg{
     gap: 10px;
 }
 
-.input, .buttonAgregar, .buttonOrdenar{
+.input, .buttonAgregar{
     display: block;
     height: 50px;
     box-sizing: border-box;
@@ -50,7 +86,7 @@ label.labelTitulo svg{
 .input {
     border:2px solid #cac3c3;
     border-radius: 4px;
-    width: 460px;
+    width: 520px;
     padding-left: 10px;
 }
 
@@ -67,20 +103,6 @@ label.labelTitulo svg{
     outline: none;
     cursor: pointer;
     }
-
-.buttonOrdenar{
-    border: 2px solid #C5C5C5;
-    background-color: #F6F6F6;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    width: 55px;
-    justify-content: center;
-    padding: 5px 15px;
-    outline: none;
-    cursor: pointer;
-  
-}
 
  .task.cont i svg{
         width: 20px;
@@ -179,5 +201,4 @@ ul {
     .input {
         width: 100%;
     }
-
 }
