--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,90 @@ body{
     padding-bottom: 50px;
 }
 
+.head{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.date {
+display: flex;
+justify-content: flex-end;
+align-items: center;
+font-family: Roboto;
+
+}
+
+.dateRight {
+    display :contents;
+    align-items : center;
+    justify-content:flex-end;
+}
+
+#dateNumber{
+    font-size:  50px ;
+    color: #69cfbd;
+    margin-left: 10px;
+    justify-content: flex-end;   
+}
+
+#dateMonth{
+    display: flex;
+    text-transform: uppercase;
+    width: 100%;
+    justify-content: flex-end;
+ padding-right: 5px; 
+}
+
+#dateText {
+    display: flex;
+    text-transform: uppercase;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+#dateNumber,
+#dateText {
+    font-weight : bold;
+    font-size: 24px;
+    align-items: center;
+    text-align: right;
+}
+
+#dateMonth,
+#dateYear{
+    display: flex;
+    position: relative;
+    font-size:  16px ;
+    font-family:  Roboto;
+    opacity: 0.8;
+    text-align: right;
+}
+
+.mes{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    }
+
+.anio{
+display: flex;
+clear: both;
+flex-direction: row;
+justify-content: flex-end;
+
+}
+
 .cont {
     width: 100%;
 }
 
 label.labelTitulo {
  font-weight: 900;
- font-size: 20px;
+ font-size: 24px;
  display: flex;
  align-items: center;
  margin-bottom: 30px;
- margin-top: 30px;
  gap: 10px;
 }
 
@@ -37,21 +110,22 @@ label.labelTitulo svg{
 
 .control{
     display: flex;
+    justify-self: stretch;
     gap: 10px;
 }
 
-.input, .buttonAgregar, .buttonOrdenar{
+.input, .buttonAgregar{
     display: block;
     height: 50px;
-    box-sizing: border-box;
-  
+    box-sizing: border-box;  
 }
 
 .input {
     border:2px solid #cac3c3;
     border-radius: 4px;
-    width: 460px;
+    flex:1;
     padding-left: 10px;
+    font-size: 16px;
 }
 
 .buttonAgregar{
@@ -68,18 +142,9 @@ label.labelTitulo svg{
     cursor: pointer;
     }
 
-.buttonOrdenar{
-    border: 2px solid #C5C5C5;
-    background-color: #F6F6F6;
-    border-radius: 5px;
+.task.cont i{
     display: flex;
     align-items: center;
-    width: 55px;
-    justify-content: center;
-    padding: 5px 15px;
-    outline: none;
-    cursor: pointer;
-  
 }
 
  .task.cont i svg{
@@ -129,6 +194,8 @@ label.labelTitulo svg{
 .task.cont p{
     order: 1;
     flex: 1;
+user-select: none;
+pointer-events: none;
 }
 
 ul {
@@ -179,5 +246,4 @@ ul {
     .input {
         width: 100%;
     }
-
 }
